--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body class="bg-gradient-to-l from-cyan-900 via-sky-800 to-cyan-900">
+  <body class="bg-gradient-to-l from-[#18242a] via-[#304954] to-[#18242a]">
     <app-root></app-root>
   </body>
 </html>
